[gd_scene load_steps=14 format=3 uid="uid://dgxfqvluu424l"]

[ext_resource type="Script" path="res://_stageControls.gd" id="1_2qjom"]
[ext_resource type="PackedScene" uid="uid://bto2cdt2xsy2r" path="res://scenes/characters/player_v4.tscn" id="1_f0fbc"]
[ext_resource type="PackedScene" uid="uid://be53ltqm0ivbq" path="res://scenes/labels/fps.tscn" id="3_rlh82"]
[ext_resource type="PackedScene" uid="uid://coqc7wqnxf46t" path="res://general_assets/clock_time.tscn" id="4_4215h"]
[ext_resource type="PackedScene" uid="uid://dn4hcohs8mnvn" path="res://scenes/menus/pause_menu.tscn" id="5_uavmr"]
[ext_resource type="PackedScene" uid="uid://hsped6g3f67e" path="res://scenes/menus/controller_menu.tscn" id="6_fpujq"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_3fxcp"]

[sub_resource type="Sky" id="Sky_hx0s0"]
sky_material = SubResource("PhysicalSkyMaterial_3fxcp")

[sub_resource type="Environment" id="Environment_8340b"]
background_mode = 1
background_color = Color(0.8, 0.639216, 0.478431, 1)
sky = SubResource("Sky_hx0s0")
ambient_light_source = 2
ambient_light_color = Color(0.121569, 0.360784, 0.6, 1)
reflected_light_source = 1
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(0.8, 0.64, 0.64, 1)
volumetric_fog_emission = Color(0.224, 0.224, 0.4, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cs5us"]

[sub_resource type="BoxShape3D" id="BoxShape3D_swuwc"]

[sub_resource type="BoxMesh" id="BoxMesh_u6h55"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hqohf"]

[node name="Stage" type="Node3D"]
script = ExtResource("1_2qjom")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8340b")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.912093, 0.370878, -0.174747, -0.154424, 0.705616, 0.691563, 0.37979, -0.603785, 0.700859, 2.56328, 10.8756, 17.2662)
shadow_enabled = true

[node name="Level" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Level"]
transform = Transform3D(50, 0, 0, 0, 0.1, 0, 0, 0, 15, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00135325, -4.88707, -0.183022)
mesh = SubResource("BoxMesh_cs5us")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Floor"]
shape = SubResource("BoxShape3D_swuwc")

[node name="Props" type="Node3D" parent="Level"]

[node name="50_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 3, -10)

[node name="40_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 1, -10)

[node name="30_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 3, -10)

[node name="20_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 5.5, -10)

[node name="10_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 4, -10)

[node name="0_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 10, -20)

[node name="-10_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 4, -10)

[node name="-20_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 5.5, -10)

[node name="-30_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 3, -10)

[node name="-40_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 1, -10)

[node name="-50_Marker" type="CSGBox3D" parent="Level/Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 3, -10)

[node name="Walls" type="Node" parent="Level"]

[node name="StaticBody3D" type="StaticBody3D" parent="Level/Walls"]
transform = Transform3D(0.1, 0, 0, 0, 5, 0, 0, 0, 10, -179.31, 2, -2)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level/Walls/StaticBody3D"]
mesh = SubResource("BoxMesh_u6h55")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Walls/StaticBody3D"]
shape = SubResource("BoxShape3D_hqohf")

[node name="PlayableUnits" type="Node3D" parent="."]

[node name="Player" parent="PlayableUnits" instance=ExtResource("1_f0fbc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D2" type="Camera3D" parent="PlayableUnits/Player"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 4, 10)

[node name="FPS" parent="PlayableUnits/Player/Camera3D2" instance=ExtResource("3_rlh82")]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, -6.5, 7.5, -6.5)
font_size = 80

[node name="Clock" parent="PlayableUnits/Player/Camera3D2" instance=ExtResource("4_4215h")]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 5.5, -5)

[node name="PauseMenu" parent="." instance=ExtResource("5_uavmr")]
visible = false
offset_left = 586.0
offset_top = 179.0
offset_right = 126.0
offset_bottom = -221.0

[node name="ControllerMenu" parent="." instance=ExtResource("6_fpujq")]
visible = false
offset_left = 390.0
offset_top = 172.0
offset_right = 460.0
